
=== Changes made since last versioned release ===

- [2023.02.24; Bug-fix; Maikuolan]: The cache handler's incEntry and decEntry
  methods weren't handling non-expiring values correctly when using flatfile
  caching; Fixed (#328).

- [2023.02.28; Maikuolan]: Added verification support for Snapchat (#422).

- [2023.02.28; Maikuolan]: Adjusted the eTaggable method, increasing expiries
  from 1 month to 6 months to further reduce superfluous requests for static
  files, and explicitly removing the Cache-Control header due to some
  implementations setting the Cache-Control header within their own code, prior
  to calling CIDRAM, thus preventing browsers from being able to properly cache
  CIDRAM's static assets (explicitly removing the header should ensure that
  static assets can be cached as expected).

=== Version/Release 1.24.0 ===
MINOR RELEASE.

- [2023.01.26; Bug-fix; Maikuolan]: When authenticating a completed CAPTCHA
  instance, depending on the exact configuration, in some cases, salts were
  being munged after fetching the instance hash but prior to verifying the
  hash, resulting in an infinite loop of needing to recomplete CAPTCHA
  instances; Fixed (#389).

- [2023.01.27; Maikuolan]: Display proper status message when updating
  configuration fails.

- [2023.01.28; NEW FEATURE; Maikuolan]: Added a new page to the front-end for
  the importing/exporting of configuration, auxiliary rules, etc.

- [2023.01.28; Bug-fix; Maikuolan]: Cache handler potentially generating
  unexpected exceptions in some situations; Fixed (#388).

- [2023.01.29; Maikuolan]: Sticky the names of auxiliary rules while scrolling
  in edit mode to help reduce confusion over which rule's data is currently
  being edited.

- [2023.01.29; Bug-fix; Maikuolan]: At the auxiliary rules page, when
  attempting to submit form data while the number of input fields displayed on
  the page exceeds the `php.ini` value defined for `max_input_vars` (such a