@@ -14,7 +14,7 @@ Config Defaults:
  bypasses:
   used:
    type: "checkbox"
-   default: "AbuseIPDB,AmazonAdBot,Bingbot,DuckDuckBot,Embedly,Feedbot,Feedspot,GoogleFiber,Googlebot,Grapeshot,Jetpack,PetalBot,Pinterest,Redditbot,Snapchat,WordPress REST API"
+   default: "AbuseIPDB,AmazonAdBot,Bingbot,DuckDuckBot,Embedly,Feedbot,Feedspot,GoogleFiber,Googlebot,Grapeshot,Jetpack,Neevabot,PetalBot,Pinterest,Redditbot,Snapchat,WordPress REST API"
    choices:
     AbuseIPDB: "AbuseIPDB"
     AmazonAdBot: "AmazonAdBot"
@@ -27,6 +27,7 @@ Config Defaults:
     Googlebot: "Googlebot"
     Grapeshot: "Grapeshot"
     Jetpack: "Jetpack"
+    Neevabot: "Neevabot"
     PetalBot: "PetalBot"
     Pinterest: "Pinterest"
     Redditbot: "Redditbot"
