@@ -1,7 +1,7 @@
 ---
 CIDRAM:
  Name: "CIDRAM"
- Version: "1.24.1-DEV+23058001"
+ Version: "1.24.1-DEV+23059000"
  Dependencies:
   PHP: "^5.4|^7|^8"
   l10n/{lang}: ">=2022.309"
@@ -246,7 +246,7 @@ CIDRAM:
    - "ee98b16e3880618a5fbf6b7e70f89eb1dbd36ea4d83a91f0b0060f8830d461bc:1661"
    - "e48dc4d8b942bc26580caebdfc7ff79bfbb3807003c918c739c9e7dfdb61bf5e:1204"
    - "67dbe791d181719036b31e00056ac418e2a9633a5ab9d8b82a18369aabe1e6c6:2434"
-   - "afd29a04e84e902798d6c0cafd77bf6c1d0e7e0a5ac62a4b712f95c2402c5428:7428"
+   - "352c82643f0359da633d02647d83fee2e343e25f739cbc8eaa2cabd31654cc84:7611"
  Reannotate: "components.dat"
 IPv4:
  Extended Description: "Default IPv4 signatures normally included with the main package. Blocks unwanted cloud services and non-human endpoints."
@@ -423,7 +423,7 @@ IPv6-Other:
  Used with: "ipv6"
  Reannotate: "components.dat"
 Bypasses:
- Version: "2023.58.0"
+ Version: "2023.59.0"
  Dependencies:
   PHP: "^5.4|^7|^8"
   CIDRAM Core: "^1.19.1"
@@ -437,8 +437,8 @@ Bypasses:
    - "bypasses.php"
    - "bypasses.yml"
   Checksum:
-   - "548663d3ea8a807305ade4214b79480c30f8f5948ce03a6021dab971cb06ca23:11904"
-   - "24a95ce8f8a43eb00429f754f39aefa6e8b0e58253522bb151a4c725de12598d:1042"
+   - "156f9c4cfb973403837170fea81f2e72c73a2af2c6919a04919b8b6e5a35589a:12155"
+   - "70b3f35bec4bff80e93ef4786dc01506ad700fab6328a00dea24f9482758b554:1076"
  Used with:
   - "n/a"
   - "imports"
