@@ -566,6 +566,6 @@ pdo_password=''
 ; Default signature bypasses configuration.
 
 ; Which bypasses should be used?
-used='AbuseIPDB,AmazonAdBot,Bingbot,DuckDuckBot,Embedly,Feedbot,Feedspot,GoogleFiber,Googlebot,Grapeshot,Jetpack,PetalBot,Pinterest,Redditbot,Snapchat,WordPress REST API'
+used='AbuseIPDB,AmazonAdBot,Bingbot,DuckDuckBot,Embedly,Feedbot,Feedspot,GoogleFiber,Googlebot,Grapeshot,Jetpack,Neevabot,PetalBot,Pinterest,Redditbot,Snapchat,WordPress REST API'
 
 
