@@ -91,6 +91,15 @@ Search Engine Verification:
   Valid domains:
    - ".mojeek.com"
 
+ # https://neeva.com/neevabot
+ # Updated: 2023.02.28
+ Neevabot:
+  User Agent: "neevabot"
+  Closure: "DNS-Reverse-Forward"
+  Valid domains:
+   - ".amazonaws.com"
+   - ".neevabot.com"
+
  # https://aspiegel.com/petalbot
  # https://github.com/CIDRAM/CIDRAM/issues/254
  # https://webmaster.petalsearch.com/site/petalbot
