@@ -15,6 +15,7 @@ Detailed version release guidelines for CIDRAM can be found at:
   caching; Fixed (#328).
 
 - [2023.02.28; Maikuolan]: Added verification support for Snapchat (#422).
+  Added search engine verification support for Neeva.
 
 - [2023.02.28; Maikuolan]: Adjusted the eTaggable method, increasing expiries
   from 1 month to 6 months to further reduce superfluous requests for static
